# Agenda

./: .dockerfile  .dockerignore  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: Cargo.toml  database.db  docker-compose.yml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250815_052738_create_tables.rs  m20250816_012525_new_task_table.rs  m20250817_224457_user.rs  m20250818_233038_task.rs  m20250902_023308_create_metas.rs  m20250902_024553_create_reminder.rs  m20251024_061500_alter_timestamps_to_timestamptz.rs
backend/src/: db.rs  dto.rs  lib.rs  main.rs  seeds.rs
backend/src/controller/: auth.rs  goal.rs  mod.rs  notes.rs  reminder.rs  report.rs  task.rs
backend/src/dto/: auth.rs  goalDTO.rs  mod.rs  reminder_dto.rs  reportDTO.rs  report_dto.rs  task.rs  taskDTO.rs  taskStatusDTO.rs  task_dto.rs  task_update_dto.rs
backend/src/entity/: goal.rs  goals.rs  mod.rs  notes.rs  prelude.rs  reminder.rs  task.rs  user.rs
backend/src/repository/: auth_repository.rs  mod.rs  task_repository.rs
backend/src/routes/: mod.rs  notes.rs
backend/src/service/: auth_service.rs  goal_service.rs  mod.rs  reminder_service.rs  report_service.rs  task_service.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: config.rs  main.rs
frontend/src/components/: bar_chart.rs  calendar_app.rs  goal_card.rs  goal_form.rs  goals_list.rs  header.rs  mod.rs  reminder_card.rs  reminder_form.rs  report_app.rs  task_card.rs  task_form.rs  taskbar.rs  theme_toggle.rs
frontend/src/hooks/: mod.rs  use_theme.rs
frontend/src/pages/: home.rs  login.rs  mod.rs  register.rs  reminder.rs
frontend/src/services/: auth.rs  goal_service.rs  mod.rs  reminder_service.rs  report_service.rs  storage.rs  tasks.rs
frontend/src/types/: goal.rs  mod.rs  note.rs  reminder.rs  report.rs  task.rs
frontend/src/utils/: mod.rs  routes.rs  validation.rs
frontend/static/: README.md
frontend/static/images/: login.avif  register2  register3
frontend/styles/: README.md  _app-container.scss  _bar_chart.scss  _base.scss  _components.scss  _goal-card.scss  _goal-components.scss  _goal-form.scss  _login.scss  _register.scss  _reminder-card.scss  _reminder.scss  _reminder_form.scss  _report-app.scss  _task-card.scss  _task-form.scss  _taskbar.scss  _utilities.scss  _variables.scss  main.scss
