[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket-jwt = "0.5.2"
rocket-jwt-authorization = "0.2.11"
rocket_cors = "0.6.0"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.14"
serde = { version = "1.0.219", features = ["derive"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
validator = { version = "0.18", features = ["derive"] }
chrono = "0.4.41"