[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = {version = "0.18.0"}
yew_icons = {version = "0.8.0" }
gloo = "0.11.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
web-sys = {version = "0.3", features = ["AudioContext", "AudioBuffer", "AudioBufferSourceNode", "AudioDestinationNode", "Response", "HtmlAudioElement", "HtmlCanvasElement", "CanvasRenderingContext2d"]}
wasm-bindgen = "0.2"
reqwest = "0.12.23"
wasm-bindgen-futures = "0.4.50"
jsonwebtoken = "9.3.1"
js-sys = "0.3.77"
gloo-timers = "0.3.0"

