[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
yew_icons = { version = "0.8" }
gloo = "0.11"
gloo-net = "0.6"
gloo-storage = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3", features = ["AudioContext", "AudioBuffer", "AudioBufferSourceNode", "AudioDestinationNode", "Response", "HtmlAudioElement", "HtmlCanvasElement", "CanvasRenderingContext2d","HtmlSelectElement"] }
wasm-bindgen = "0.2"
reqwest = "0.12"
wasm-bindgen-futures = "0.4"
jsonwebtoken = "9.3"
js-sys = "0.3"
gloo-timers = "0.3"

